--- a/.liquidpromptrc
+++ b/.liquidpromptrc
@@ -6,7 +6,7 @@
 # If you want to use different themes and features,
 # you can load the corresponding files here:
 #source ~/.config/liquidprompt/nojhan.theme
-#LP_PS1_FILE=~/.config/liquidprompt/nojhan.ps1
+LP_PS1_FILE=~/.liquid.ps1
 
 #############
 # BEHAVIOUR #
@@ -23,7 +23,7 @@ LP_LOAD_THRESHOLD=60
 # Display the temperature when the temperate is above this threshold (in
 # degrees Celsius).
 # Recommended value is 60
-LP_TEMP_THRESHOLD=60
+LP_TEMP_THRESHOLD=65
 
 # Use the shorten path feature if the path is too long to fit in the prompt
 # line.
@@ -33,7 +33,7 @@ LP_ENABLE_SHORTEN_PATH=1
 # The maximum percentage of the screen width used to display the path before
 # removing the center portion of the path and replacing with '...'.
 # Recommended value is 35
-LP_PATH_LENGTH=35
+LP_PATH_LENGTH=80
 
 # The number of directories (including '/') to keep at the beginning of a
 # shortened path.
@@ -45,11 +45,11 @@ LP_PATH_KEEP=2
 # Defaults to 0 (do not display hostname when locally connected)
 # set to 1 if you want to always see the hostname
 # set to -1 if you want to never see the hostname
-LP_HOSTNAME_ALWAYS=0
+LP_HOSTNAME_ALWAYS=1
 
 # Use the fully qualified domain name (FQDN) instead of the short hostname when
 # the hostname is displayed
-LP_ENABLE_FQDN=0
+LP_ENABLE_FQDN=1
 
 # Always display the user name, even if the user is the same as the one logged
 # in.
@@ -120,7 +120,7 @@ LP_ENABLE_TIME=0
 
 # Show runtime of the previous command if over LP_RUNTIME_THRESHOLD
 # Recommended value is 0
-LP_ENABLE_RUNTIME=0
+LP_ENABLE_RUNTIME=1
 
 # Minimal runtime (in seconds) before the runtime will be displayed
 # Recommended value is 2
